--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "type": "git",
     "url": "git+https://github.com/staticland/static.land.git"
   },
-  "author": "",
+  "author": "sethvincent",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/staticland/static.land/issues"
